--- a/src/components/BrianMain.scss
+++ b/src/components/BrianMain.scss
@@ -11,13 +11,16 @@ h3 {
   margin: 40px 0 0;
 }
 ul {
-  list-style-type: none;
+  list-style-type: circle !important;
   padding: 0;
 }
+
 li {
-  display: inline-block;
-  margin: 0 10px;
+  // display: inline-block;
+  margin: 0 25px;
+  list-style-type: circle;
 }
+
 a {
   color: #42b983;
 }
@@ -30,6 +33,12 @@ a {
   border-bottom-right-radius: 20px;
   border-top-left-radius: 20px;
   // margin-left: 15px;
+}
+
+.bord_highlight:hover {
+  background-color: $mblue;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-in;
 }
 
 .header {
@@ -55,6 +64,18 @@ a {
   padding-bottom: 3px;
 }
 
-li {
-  list-style-type: circle;
+.sectHeader1 {
+  width: 130px;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.sectHeader2 {
+  width: 150px;
+  padding-left: 17px;
+  padding-right: 17px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
