--- a/src/components/BrianMain.scss
+++ b/src/components/BrianMain.scss
@@ -19,6 +19,7 @@ li {
   // display: inline-block;
   margin: 0 25px;
   list-style-type: circle;
+  font-size: 12px;
 }
 
 a {
@@ -35,12 +36,6 @@ a {
   // margin-left: 15px;
 }
 
-.bord_highlight:hover {
-  background-color: $mblue;
-  transition-duration: 0.25s;
-  transition-timing-function: ease-in;
-}
-
 .header {
   margin-top: -50px;
   margin-left: 15px;
@@ -50,6 +45,7 @@ a {
   text-align: left;
   margin-left: 15px;
   margin-top: 15px;
+  font-size: 13px;
 }
 
 .midSection {
@@ -64,18 +60,8 @@ a {
   padding-bottom: 3px;
 }
 
-.sectHeader1 {
-  width: 130px;
-  padding-left: 17px;
-  padding-right: 17px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.sectHeader2 {
-  width: 150px;
-  padding-left: 17px;
-  padding-right: 17px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+.sectHeader:hover {
+  background-color: $mblue;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-in;
 }
