countries up and mouseovering

--- a/src/components/BrianMain.scss
+++ b/src/components/BrianMain.scss
@@ -43,13 +43,22 @@ a {
 
 .profile {
   text-align: left;
-  margin-left: 15px;
+  // margin-left: 15px;
   margin-top: 15px;
   font-size: 13px;
 }
 
 .midSection {
   margin-top: 20px;
+  margin-left: 15px;
+}
+
+.projSection {
+  margin-left: 15px;
+}
+
+#openingLine {
+  margin-left: 15px;
 }
 
 .sectHeader {
